app/component/map/map.scss
/* ... */
.single-popup {
 .leaflet-popup-content {
   width: 300px;
 }
}

.choice-popup {
 .leaflet-popup-content {
   min-width: 240px;
 }
}

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
}

div.origin-popup {
  font-size: $font-size-xxsmall;
  cursor: pointer;
  min-width: 15em;
  left: -21px !important;

  .origin-popup-header {
    @include font-bold;
    text-transform: uppercase;
    color: $link-color;
    width: 90%;
    margin-bottom: 3px;

    .icon {
      margin: 0 0 -2px 8px;
      font-size: $font-size-small;
    }
  }

  .leaflet-popup-content-wrapper {
    border-radius: $border-radius;
    padding: 0;
    overflow: hidden;

    .leaflet-popup-content {
      margin: 12px 8px 8px 8px;
      svg.right-arrow {
        height: 9px;
      }
      .card-code {
        margin-right: 5px;
        padding: 2px;
      }
    }
  }

  .origin-popup-name {
    @include font-book;
    height: 1.4em;
    width: 200px;
    text-transform: none;
    color: $black;
    font-size: $font-size-small;
    overflow: hidden;
  }

  .shade-to-white {
    background-image: linear-gradient(to left, white, rgba(255, 255, 255, 0));
    width: 2em;
    height: 1.5em;
    position: absolute;
    right: 0;
    top: 2em;
  }

  .leaflet-popup-tip-container {
    position: relative;
    left: 0px;
    margin: 0px 0px;
  }
}

.route-header {
  .route-header-trip {
    top: 0.7em;
    height: 1.5em;
    margin-top: 0.2em;
    margin-left: 0.5em;
    font-size: 70%;
    padding: 0.1em 0.4em;
    border: solid 1px $light-gray;
    border-radius: $border-radius;
    color: $gray;
  }
}

.map .stop-halo {
  fill: #fff;
  fill-opacity: 1;
}

.map .stop {
  stroke: currentColor;
  stroke-opacity: 1;
  fill: #fff;
  fill-opacity: 1;
}

.map .icon.stop-marker {
  width: auto;
  height: auto;
}

.leaflet-marker-icon.call {
  width: auto;
  height: auto;
  margin-right: 0.75em;
  font-size: 1.5em;
}

/* BEWARE! This is an ugly hack.
 * It so happens that firefox will not allow SVG clicks to bubble to DOM if pointer-events: none is not set.
 * If we set pointer-events: none for all browsers, then we lose "pointer cursor" for all browsers.
 * This css selector targets only firefox: https://css-tricks.com/snippets/css/css-hacks-targeting-firefox/
 */
@-moz-document url-prefix() {
  .map .stop {
    pointer-events: none;
  }

  .map .stop-halo {
    pointer-events: none;
  }
}

.map .thin .stop,
.map .thin .stop-small {
  stroke-opacity: $stop-thin-opacity;
  fill-opacity: $stop-thin-opacity;
}

.map .stop-small {
  stroke: #fff;
  stroke-opacity: 1;
  fill: currentColor;
  fill-opacity: 1;
}

.map .icon.mode-icon {
  height: 100%;
  width: 100%;
}

.map svg use {
  pointer-events: none;
}

.map .thin .stop-small {
  stroke-opacity: $stop-thin-opacity;
  fill-opacity: $stop-thin-opacity;
}

.map .legmarker {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  & > div {
    @include font-narrow-medium;
    background-color: $white;
    border-width: 2px;
    border-style: solid;
    border-radius: $border-radius;
    padding: 0 2px;
    text-align: center;
    flex-shrink: 0; /* work around iOS bug with flex sizes */
    white-space: nowrap;
    margin-left: -50%;
    margin-right: 50%;
    margin-top: -9px;
  }
}

.map .leg-halo.call {
  stroke: gray;
  //    stroke-opacity: 0.8;
}
.map .leg-halo {
  stroke: #fff;
  stroke-opacity: 1;
  color: #ccc;
  &.walk,
  &.bicycle_walk,
  &.citybike_walk {
    stroke-linecap: round;
    stroke-dasharray: 0.1, 7;
  }
  &.bicycle,
  &.citybike {
    stroke-linecap: round;
    stroke-dasharray: 10, 5;
  }
}

.map .leg {
  stroke-opacity: 1;
  &.walk,
  &.bicycle_walk,
  &.citybike_walk {
    stroke-linecap: round;
    stroke-dasharray: 0.1, 7;
  }
  &.bicycle,
  &.citybike {
    stroke-linecap: round;
    stroke-dasharray: 10, 5;
  }
}

.map .thin {
  stroke-opacity: 0.5;
}

/* Fix to default leaflet behavior */
.leaflet-map-pane svg {
  position: relative;

  &.icon-badge {
    transform: translate(-0.5em, -2.5em);
    > .badge-circle {
      stroke-width: 2;
    }
  }
}

.leaflet-marker-icon > svg {
  position: absolute;
}

div.map-click-prevent-overlay {
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%;
  z-index: 801;
}

div.leaflet-control-scale.leaflet-control {
  //front page
  margin-right: 10px;
  margin-bottom: 20px;
  cursor: grab;
}

.bp-large .leaflet-control-scale.leaflet-control {
  //front page desktop
  right: calc(100px + 28vw);
  bottom: 24px;
  cursor: grab;
}

.map.full .leaflet-control-scale.leaflet-control {
  //stop & ininerary page mobile
  margin-right: 60px;
  margin-bottom: 20px;
  cursor: grab;
}

.desktop .map.full .leaflet-control-scale.leaflet-control {
  //stop & ininerary page mobile
  margin-right: 20px;
  margin-bottom: 20px;
  cursor: grab;
}

div.leaflet-control-scale-line {
  text-align: right;
  margin-bottom: -4px;
  cursor: grab;
  background: rgba(255, 255, 255, 0);
  border: none;
}

.leaflet-control-scale::after {
  content: '';
  display: block;
  border-bottom: 1px solid #888888;
  border-left: 1px solid #888888;
  border-right: 1px solid #888888;
  height: 4px;
  background: none;
  cursor: grab;
}

.activeAreaLarge {
  position: absolute;
  top: 50px;
  bottom: 20px;
  left: 0px;
  right: 370px;
}

.activeAreaSmall {
  position: absolute;
  top: 95px;
  bottom: 0px;
  left: 0px;
  width: 100%;
}

.smallspinner {
  div.spinner-loader {
    width: $spinner-size * 0.5;
    height: $spinner-size * 0.5;
  }
}

.leaflet-tooltip.geoJsonText {
  direction: 'center';
  box-shadow: none;
  border: none;
  background: transparent;
  cursor: none;
// interactive: false;
  font-size: 50px;
  color: $primary-color;
}

.leaflet-popup.geoJsonPopup {
  @include font-medium;
  .leaflet-popup-content-wrapper {
    border-radius: $border-radius;
  }
}

